spacing fixed

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -334,7 +334,7 @@ a {
 
   .sub-title {
     margin-top: 0px;
-    margin-bottom: 25px;
+    margin-bottom: 30px;
   }
 
   .influencer-or-brand-container {
@@ -351,15 +351,19 @@ a {
   }
 
   .title {
-    margin-top: 30px;
+    margin-top: 20px;
   }
 }
 
 @media screen and (max-width: 600px) {
   .form-container {
     height: auto;
+    margin-bottom: 10px !important;
   }
 
+  .header {
+    padding: 25px 0px;
+  }
   .desktop-hide {
     display: block;
   }
@@ -387,12 +391,12 @@ a {
   .portfolio-btn {
     margin: 20px auto;
     font-size: 0.8rem;
-    padding: 15px 30px;
+    padding: 13px 28px;
   }
 
   .success-conteinr {
-    padding: 25px 40px;
-    margin-bottom: 40px;
+    padding: 25px;
+    margin-bottom: 30px;
     border-radius: 30px;
   }
 
@@ -403,7 +407,10 @@ a {
 
   .success-subtitle {
     font-size: 1.3rem;
-    margin-bottom: 8px;
+    margin-bottom: 15px;
+  }
+  .cheers-txt {
+    margin-bottom: 5px;
   }
 
   .double-quotes-img {
@@ -479,17 +486,17 @@ a {
   }
   .get-in-touch-txt {
     font-weight: 500;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     margin-top: 0px;
     font-size: 1rem;
   }
 
   .ant-form-item {
-    margin-bottom: 10px !important;
+    margin-bottom: 0px !important;
   }
 
   .brand-logo {
-    max-width: 45px;
+    max-width: 35px;
   }
 
   .getting-discovered-txt-mob {
